--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
   </nav>
   <main class="page landing-page">
-    <section class="clean-block clean-hero" style="background-image:url(&quot;assets/img/assignment/1.jpg&quot;);color:rgba(9, 162, 255, 0.85);">
+    <section class="clean-block clean-hero" style="background-image:url(&quot;assets/img/assignment/1.webp&quot;);color:rgba(9, 162, 255, 0.85);">
       <div class="text">
         <h2>This is the Homepage.</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p><button class="btn btn-outline-light btn-lg" type="button">Learn More</button>
@@ -41,7 +41,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
         </div>
         <div class="row align-items-center">
-          <div class="col-md-6"><img class="img-thumbnail" src="assets/img/scenery/image5.jpg"></div>
+          <div class="col-md-6"><img class="img-thumbnail" src="assets/img/scenery/image5.webp"></div>
           <div class="col-md-6">
             <h3>Lorem impsum dolor sit amet</h3>
             <div class="getting-started-info">
@@ -85,9 +85,9 @@
         </div>
         <div class="carousel slide" data-bs-ride="carousel" id="carousel-1">
           <div class="carousel-inner">
-            <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/scenery/image1.jpg" alt="Slide Image"></div>
-            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/scenery/image4.jpg" alt="Slide Image"></div>
-            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/scenery/image6.jpg" alt="Slide Image"></div>
+            <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/scenery/image1.webp" alt="Slide Image"></div>
+            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/scenery/image4.webp" alt="Slide Image"></div>
+            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/scenery/image6.webp" alt="Slide Image"></div>
           </div>
           <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1"
               role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
@@ -107,7 +107,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-sm-6 col-lg-4">
-            <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar1.jpg">
+            <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar1.webp">
               <div class="card-body info">
                 <h4 class="card-title">John Smith</h4>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -117,7 +117,7 @@
             </div>
           </div>
           <div class="col-sm-6 col-lg-4">
-            <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar2.jpg">
+            <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar2.webp">
               <div class="card-body info">
                 <h4 class="card-title">Robert Downturn</h4>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -126,7 +126,7 @@
             </div>
           </div>
           <div class="col-sm-6 col-lg-4">
-            <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar3.jpg">
+            <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar3.webp">
               <div class="card-body info">
                 <h4 class="card-title">Ally Sanders</h4>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
